# opengl_test

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  disparity_display.h  ply_display.h
lib/def/: cam_para.h  win_boundary.h
lib/gl_window/: CMakeLists.txt  fnptr.h  gl_window.cpp  gl_window.h
lib/math/: quadric_surface.h  tk_spline.h
lib/model_def/: model.h
lib/model_generator/: CMakeLists.txt
lib/model_generator/disparity/: sgbm_solver.cpp  sgbm_solver.h
lib/model_generator/ply/: SfMPlyHelper.hpp  ply_loader.cpp  ply_loader.h
lib/ply_viewer/: CMakeLists.txt  ply_viewer.h
lib/ply_viewer/gls/: fnptr.h  gl_project.h  gl_window.cpp  gl_window.h
lib/ply_viewer/io/: ply_loader.cpp  ply_loader.h
lib/ply_viewer/io/def/: ply_def.h
lib/rectify/: rectifier.h
model_ply/: cube.ply  robust.ply
src/: CMakeLists.txt  main.cpp  test_disparity.cpp  test_global_sfm.cpp  test_ply.cpp
src/global_sfm/: CMakeLists.txt  global_sfm.cpp  global_sfm.h  main.cpp
